[gd_scene load_steps=5 format=3 uid="uid://wxpgg74bd1yh"]

[ext_resource type="Script" uid="uid://bo15n4nmxsopn" path="res://GBIS_demos/4_change_data_source/change_data_source.gd" id="1_npxgu"]
[ext_resource type="Script" uid="uid://c5rou3jm33pbt" path="res://addons/grid_base_inventory_system/core/view/item/drop_area_view.gd" id="2_r5i8l"]
[ext_resource type="Script" uid="uid://b3x4mwtjmm4tp" path="res://addons/grid_base_inventory_system/core/view/container/inventory/inventory_view.gd" id="3_wdhmk"]
[ext_resource type="PackedScene" uid="uid://bmtorijdfu4jh" path="res://GBIS_demos/item_info/item_info.tscn" id="4_3yb58"]

[node name="ChangeDataSource" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_npxgu")

[node name="DropAreaView" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 3747.0
offset_bottom = 2126.0
script = ExtResource("2_r5i8l")
metadata/_custom_type_script = "uid://c5rou3jm33pbt"

[node name="Inventory" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 97.0
offset_right = 750.0
offset_bottom = 555.0
color = Color(0.17027, 0.17027, 0.17027, 1)

[node name="InventoryView" type="Control" parent="Inventory"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -159.5
offset_top = -393.0
offset_right = 160.5
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_wdhmk")
container_name = "demo4_inventory"
container_columns = 10
container_rows = 12
stack_num_font_size = 12
stack_num_margin = 2
stack_num_color = Color(0.856916, 0.880705, 0.757161, 1)
metadata/_custom_type_script = "uid://b3x4mwtjmm4tp"

[node name="InventoryView2" type="Control" parent="Inventory"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -146.0
offset_right = -176.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_wdhmk")
container_name = "demo4_inventory"
container_columns = 10
container_rows = 12
base_size = 12
stack_num_font_size = 4
stack_num_margin = 1
metadata/_custom_type_script = "uid://b3x4mwtjmm4tp"

[node name="Label" type="Label" parent="Inventory"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.0
offset_right = 83.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonCloseInventory" type="Button" parent="Inventory"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -69.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = 54.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "X"

[node name="Storage" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 97.0
offset_right = 1055.0
offset_bottom = 429.0
color = Color(0.17027, 0.17027, 0.17027, 1)

[node name="StorageView" type="Control" parent="Storage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -96.0
offset_right = 128.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_wdhmk")
container_name = "demo4_storage"
container_columns = 8
container_rows = 8
grid_border_color = Color(0.741829, 0.728659, 0.855877, 1)
gird_background_color_empty = Color(0.251759, 0.44292, 0.364007, 1)
stack_num_font_size = 12
stack_num_margin = 2
stack_num_color = Color(0.856916, 0.880705, 0.757161, 1)
metadata/_custom_type_script = "uid://b3x4mwtjmm4tp"

[node name="Label" type="Label" parent="Storage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_top = 3.0
offset_right = 112.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Storage"
horizontal_alignment = 1

[node name="ButtonCloseStorage" type="Button" parent="Storage"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 38.0
offset_top = 97.0
offset_right = 176.0
offset_bottom = 268.0

[node name="ButtonToggleInventory" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Toggle Inventory"

[node name="ButtonToggleStorage" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Toggle Storage"

[node name="ButtonAddTestItems" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Test Items"

[node name="ButtonSave" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="ButtonLoad" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 562.0
offset_right = 638.0
offset_bottom = 611.0
text = "The small inventory and big inventory share the same name,
so they mirror each other."

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 356.0
offset_top = 12.0
offset_right = 918.0
offset_bottom = 61.0
text = "Shift + right click to quick move item
Middle mouse button to split stackable items
Right mouse button to use consumable items"

[node name="ItemInfo" parent="." instance=ExtResource("4_3yb58")]
layout_mode = 0
offset_left = 42.0
offset_top = 327.0
offset_right = 184.0
offset_bottom = 373.0

[node name="ButtonChangeToInv" type="Button" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 98.0
offset_right = 403.0
offset_bottom = 129.0
text = "Change To Inventory"

[node name="ButtonChangeToStorage" type="Button" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 138.0
offset_right = 403.0
offset_bottom = 169.0
text = "Change To Storage"

[connection signal="pressed" from="Inventory/ButtonCloseInventory" to="." method="_on_button_close_inventory_pressed"]
[connection signal="pressed" from="Storage/ButtonCloseStorage" to="." method="_on_button_close_storage_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonToggleInventory" to="." method="_on_button_toggle_inventory_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonToggleStorage" to="." method="_on_button_toggle_storage_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonAddTestItems" to="." method="_on_button_add_test_items_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoad" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="ButtonChangeToInv" to="." method="_on_button_change_to_inv_pressed"]
[connection signal="pressed" from="ButtonChangeToStorage" to="." method="_on_button_change_to_storage_pressed"]
